--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "gh-pages": "^6.0.0"
+    "tailwindcss": "^3.4.17"
   },
   "homepage": "https://shivam2509web.github.io/portfolio"
 }
